--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,16 @@ application {
     mainClass = 'farmer.App'
 }
 
+jar {
+    manifest {
+        attributes "Main-Class": "farmer.App"
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
